--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.2.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
