--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.2.0",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.18.1",
+    "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3",
