--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
     "sequelize": "^6.37.3",
     "slugify": "^1.6.6"
   },
